--- a/assets/sass/layout/_wrapper.scss
+++ b/assets/sass/layout/_wrapper.scss
@@ -12,8 +12,9 @@
 		@include vendor('align-items', 'center');
 		@include vendor('justify-content', 'space-between');
 		position: relative;
-		min-height: 100vh;
-		width: 100%;
+               height: 100vh;
+               overflow: hidden;
+               width: 100%;
 		padding: 4rem 2rem;
 		z-index: 3;
 
